FISH-6259 CLIBootstrap with add-opens option